--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,24 @@ header {
     background-color: transparent;    
     position: fixed;
     top: 0;
-    left: 0;
     right: 0; /*oppure width 100%*/
     z-index: 100;
 }
 
-.col-nav {
-    text-align: end;
-    padding: 20px;
+header li a {
+    display: block;
+    width: 3vw;
+    text-align: center;
+    line-height: 3vw;
+    background-color: white;
+    border-radius: 50%;
+    color: black;
+    text-decoration: none;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-    margin: 0 10px;
+header li {
+    display: inline-block;
+    margin: 25px 15px;
 }
 
 .white-circle {
@@ -45,10 +49,10 @@ a {
 .box {
     height: 100vh;
     width: 100%;
-    padding-bottom: 50px;
+    padding-bottom: 75px;
 }
 
-.overlay {
+.row {
     position: relative;
     width: 100%;
     height: 100%;
